# Algo-MiMC-Hasher

./: .gitignore  README.md  jest.config.js  package.json  rollup.config.mjs  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
copyright-notices/: README.md
src/: LSIGs.ts  binaryFormat.ts  constants.ts  index.ts  types.ts  util.ts
src/PuyaContracts/: build.sh  common.py
src/PuyaContracts/MIMC/: contract.py  pyproject.toml
src/PuyaContracts/mimc_hasher/: contract.py  pyproject.toml
tests/: index.test.ts  util.ts
